// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <h1
      data-stylename="title"
    >
      Sign in to Hylo
    </h1>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="email"
      >
        Your email address
      </label>
      <TextInput
        aria-label="email"
        data-stylename="authInput"
        id="email"
        inputRef={[Function]}
        label="email"
        name="email"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="password"
      >
        Password
      </label>
      <TextInput
        aria-label="password"
        data-stylename="authInput"
        id="password"
        label="password"
        name="password"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        type="password"
      />
      <Link
        data-stylename="forgot-password"
        to="/reset-password"
      >
        <span
          data-stylename="forgot-password"
        >
          Forgot password?
        </span>
      </Link>
    </div>
    <Button
      data-stylename="submit"
      label="Sign in"
      onClick={[Function]}
    />
  </div>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`renders correctly with mobile redirect 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <DownloadAppPortal
      url="some.url"
    />
    <h1
      data-stylename="title"
    >
      Sign in to Hylo
    </h1>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="email"
      >
        Your email address
      </label>
      <TextInput
        aria-label="email"
        data-stylename="authInput"
        id="email"
        inputRef={[Function]}
        label="email"
        name="email"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <div
      data-stylename="field"
    >
      <label
        data-stylename="field-label"
        htmlFor="password"
      >
        Password
      </label>
      <TextInput
        aria-label="password"
        data-stylename="authInput"
        id="password"
        label="password"
        name="password"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onEnter={[Function]}
        onFocus={[Function]}
        type="password"
      />
      <Link
        data-stylename="forgot-password"
        to="/reset-password"
      >
        <span
          data-stylename="forgot-password"
        >
          Forgot password?
        </span>
      </Link>
    </div>
    <Button
      data-stylename="submit"
      label="Sign in"
      onClick={[Function]}
    />
  </div>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;
